--- a/fsp1/numpy_tutorial.ipynb
+++ b/fsp1/numpy_tutorial.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1D Array: [1 2 3 4 5]\n"
+      "1D Array: [1 2 3 4 5 6]\n"
      ]
     }
    ],
@@ -20,14 +20,14 @@
     "import pandas as pd\n",
     "\n",
     "# Creating a 1D array from a list\n",
-    "my_list = [1, 2, 3, 4, 5]\n",
+    "my_list = [1, 2, 3, 4, 5, 6]\n",
     "numpy_array_1d = np.array(my_list)\n",
     "print(\"1D Array:\", numpy_array_1d)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "d49aa33f-b802-45e1-b407-7f73aa3d8677",
    "metadata": {},
    "outputs": [
@@ -40,6 +40,7 @@
       "Shapeof a: (12,)\n",
       "data type of each element: int64\n",
       "-----------------------------------------\n",
+      "shape of b: (3, 4)\n",
       "[[ 0  1  2  3]\n",
       " [ 4  5  6  7]\n",
       " [ 8  9 10 11]]\n",
@@ -62,6 +63,7 @@
     "print(\"data type of each element:\",a.dtype)\n",
     "print(\"-----------------------------------------\")\n",
     "b= a.reshape(3,4) #change the dim of an array\n",
+    "print(\"shape of b:\",b.shape)\n",
     "print(b)\n",
     "print(\"Sum of all:\",b.sum())\n",
     "print(\"Row sum:\",b.sum(axis=0)) #row sum\n",
@@ -72,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "f326134e-0331-425c-966a-b86b1bf13ce4",
    "metadata": {},
    "outputs": [
@@ -93,7 +95,7 @@
     "a= np.array([[1,2],[3,4]])\n",
     "print (a)\n",
     "print(a+3) #adds 3 to each element\n",
-    "print(a>3)"
+    "print(a>3) #returns true if a number in the array is greater than 3(4>3) and false for others "
    ]
   },
   {
@@ -178,7 +180,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -192,7 +194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
