--- a/fsp1/pandas_tutorial.ipynb
+++ b/fsp1/pandas_tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "a2118ec2-a3e5-4148-b070-4410d68c0ac0",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "fecc0e3f-9349-4c35-8bbb-2f9677ff4304",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,10 +61,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "953bc89e-1ebb-459b-86ae-7d4754443977",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "names    [lightangel, bimbok, shadowblue, bongaon]\n",
+      "phys                              [89, 84, 77, 99]\n",
+      "chem                              [89, 84, 77, 99]\n",
+      "math                              [89, 84, 77, 99]\n",
+      "dtype: object\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -133,7 +144,7 @@
        "3     bongaon    99    99    99"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,10 +155,10 @@
     "    \"phys\":[89,84,77,99],\n",
     "    \"chem\":[89,84,77,99],\n",
     "    \"math\":[89,84,77,99]\n",
-    "}\n",
+    "} # a python dictionary\n",
     "\n",
     "s3=pd.Series(d1)\n",
-    "s3\n",
+    "print(s3)\n",
     "df= pd.DataFrame(d1) #creating data frame\n",
     "df"
    ]
@@ -740,7 +751,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -754,7 +765,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
