--- a/fsp4/idk.ipynb
+++ b/fsp4/idk.ipynb
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "d2b1322c",
    "metadata": {},
    "outputs": [
@@ -485,7 +485,7 @@
    ],
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
-    "sc = StandardScaler()\n",
+    "sc = StandardScaler() #feature scaling\n",
     "x = sc.fit_transform(x) #this reduces the actual values in a range(small range increases accuracy)\n",
     "x"
    ]
@@ -1216,7 +1216,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1230,7 +1230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
